Cleaned up index file

--- a/index.html
+++ b/index.html
@@ -3,34 +3,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-	<title>kennethkalmer/powerdns-on-rails @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #ffe0e2;
-		  font-family: "helvetica"; 
-  		color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #001f1d; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #001f1d; }
-    h3 { text-align: center; color: #001f1d; }
-    a { color: #001f1d; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>kennethkalmer/powerdns-on-rails @ GitHub</title>
+  <link href="/stylesheets/site.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -46,28 +21,36 @@
     </div>
       
     <h1><a href="http://github.com/kennethkalmer/powerdns-on-rails">PowerDNS on Rails</a> 
-      <span class="small">by <a href="http://github.com/kennethkalmer">kennethkalmer</a></small></h1>
+      <span class="small">by <a
+      href="http://github.com/kennethkalmer">Kenneth Kalmer</a></small></h1>
 
     <div class="description">
-      Ruby on Rails based management software for PowerDNS's generic MySQL and PostgreSQL backends
+      Ruby on Rails based management software for PowerDNS's generic MySQL and PostgreSQL backends.
     </div>
 
     <h2>Dependencies</h2>
-<p>Ruby & Rubygems
-MySQL or PostgreSQL
-PowerDNS (for testing)</p>
-<h2>Install</h2>
-<p>git clone git://github.com/kennethkalmer/powerdns-on-rails.git
-cd powerdns-on-rails
-vi config/database.yml
-rake db:seed
-ruby script/server</p>
-<h2>Authors</h2>
-<p>Kenneth Kalmer (kenneth.kalmer@gmail.com)<br/>Casper Peter Lotter (casper.lotter@gmail.com)<br/>Keegan Anderson (keegan@inx.co.za)</p>
-<h2>Contact</h2>
-<p>Kenneth Kalmer (kenneth.kalmer@gmail.com)<br/>      </p>
+    <ul>
+      <li>Ruby & Rubygems</li>
+      <li>MySQL or PostgreSQL</li>
+      <li>PowerDNS</li>
+    </ul>
 
-
+    <h2>Install</h2>
+    <ol>
+      <li>git clone git://github.com/kennethkalmer/powerdns-on-rails.git</li>
+      <li>cd powerdns-on-rails</li>
+      <li>vi config/database.yml</li>
+      <li>rake db:seed</li>
+      <li>ruby script/server</li>
+      <li>Point your browser to http://localhost:3000/</li>
+      <li>Login with 'admin' and 'secret'</li>
+    </ol>
+    <h2>Authors</h2>
+    <p>Kenneth Kalmer (kenneth.kalmer@gmail.com)<br/>
+    Casper Lotter (casper.lotter@gmail.com)<br/>
+    Keegan Anderson (keegan@inx.co.za)</p>
+    <h2>Contact</h2>
+    <p>Kenneth Kalmer (kenneth.kalmer@gmail.com)</p>
     <h2>Download</h2>
     <p>
       You can download this project in either
@@ -82,9 +65,6 @@ ruby script/server</p>
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/kennethkalmer/powerdns-on-rails">kennethkalmer/powerdns-on-rails</a>
     </div>
-    
   </div>
-
-  
 </body>
 </html>
